# tempra

./: README.md  pyproject.toml
examples/: demo.py
src/tempra/: __init__.py  axis.py  config.py  tempra.py  units.py
tests/: test_tempra.py
