[tool.poetry]
name = "tempra"
version = "0.1.0"
description = "Package for handling timestamped or event-driven asynchronous signals"
authors = ["Jason Raether <jasondraether@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
